# scanner_redes

./: README.md  build_deb.sh  build_exe.sh  pyproject.toml  requirements.txt  scanner_dark.py  scanner_dark.spec
package_dir/DEBIAN/: control
